--- a/StockManager/View/MainWindow.xaml
+++ b/StockManager/View/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        xmlns:local="clr-namespace:StockManager" 
         Title="Stock Manager"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="Window_MouseLeftButtonDown" Focusable="True" ResizeMode="NoResize"
-        WindowState="Normal"  Height="756" Width="768">
+        WindowState="Normal"  Height="{Binding SystemParameters.PrimaryScreenHeight}" Width="{Binding SystemParameters.PrimaryScreenWidth}">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
