--- a/StockManager/DBResources.xaml
+++ b/StockManager/DBResources.xaml
@@ -70,7 +70,7 @@
         <Setter Property="Focusable" Value="False" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Width" Value="179" />
-        <Setter Property="Height" Value="97"/>
+        <!--<Setter Property="Height" Value="50"/>-->
         <Setter Property="BorderThickness" Value="0"></Setter>
      
         <Setter Property="Template">
@@ -80,7 +80,7 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="0"
-                                CornerRadius="20"
+                                CornerRadius="10"
                                 SnapsToDevicePixels="true">
                         <ContentPresenter Name="Presenter" Margin="{TemplateBinding Padding}"
                                     VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
@@ -108,7 +108,7 @@
    
 
     <Style x:Key="style_navigTextBlock" TargetType="{x:Type TextBlock}">
-        <Setter Property="FontSize" Value="30"></Setter>
+        <Setter Property="FontSize" Value="35"></Setter>
         <Setter Property="Foreground" Value="#00a5c2"></Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
